# FFT-Experiments

./: .gitignore  CMakeLists.txt  FFTtest.code-workspace  README.md
src/: CMakeLists.txt  PluginParameter.h  PluginProcessor.cpp  PluginProcessor.h  STFT.h  Tools.cpp  Tools.hpp
test/: CMakeLists.txt  ctest.cpp
